--- a/Proyecto1/plantillas/saludo.html
+++ b/Proyecto1/plantillas/saludo.html
@@ -13,7 +13,7 @@
     <button style="height: 50px;width: 100px;">
         Categoria
     </button>
-    <input type="checkbox"  />
+    <input type="datetime"  />
 
 </body>
 </html>
